# SurveXX

./: Readme.md  debug-backend-chroma-path.md  package.json
.dbg/: backend-chroma-path.env  trae-debug-log-backend-chroma-path.ndjson
backend/: .gitignore  main.py  pyproject.toml  rag.py  requirements.txt
backend/.github/workflows/: backend.yml
backend/data/: info.txt
backend/train/: train.ipynb
face/: .gitignore  README.md  index.html  package-lock.json  package.json
face/.github/workflows/: frontend.yml
face/src/: App.css  App.jsx  index.css
face/src/components/: Dither.jsx  LetterGlitch.jsx  ProtectedRoute.jsx  ShapeGrid.jsx
face/src/context/: AuthContext.jsx
face/src/pages/: Dashboard.jsx  Landing.jsx  Login.jsx
