[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb==1.1.0",
    "fastapi==0.136.3",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "langchain==0.3.26",
    "langchain-community==0.3.27",
    "langchain-core==0.3.68",
    "langchain-groq==0.2.5",
    "langchain-huggingface==0.1.2",
    "langchain-text-splitters==0.3.8",
    "numpy==2.4.6",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.20",
    "requests==2.34.2",
    "sentence-transformers==5.5.1",
    "torch==2.12.0",
    "transformers==5.10.2",
    "uvicorn==0.49.0",
]
